# incite

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/rules/: coding-style.md  patterns.md  performance.md  security.md  testing.md  training.md
.github/workflows/: ci.yml  publish.yml
config/: default.yaml
editor-plugins/chrome-incite-v2/: esbuild.config.mjs  manifest.json  package.json  tsconfig.json
editor-plugins/chrome-incite-v2/options/: options.css  options.html
editor-plugins/chrome-incite-v2/panel/: panel.css  panel.html
editor-plugins/chrome-incite-v2/popup/: popup.css  popup.html
editor-plugins/chrome-incite-v2/src/background/: service-worker.ts
editor-plugins/chrome-incite-v2/src/content/: googledocs.ts  overleaf-isolated.ts  overleaf-main.ts  shared.ts  translator-runner.ts
editor-plugins/chrome-incite-v2/src/options/: options.ts
editor-plugins/chrome-incite-v2/src/panel/: panel.ts
editor-plugins/chrome-incite-v2/src/popup/: popup.ts
editor-plugins/chrome-incite-v2/src/shared/: citation-storage.ts  constants.ts  settings.ts  types.ts
editor-plugins/chrome-incite-v2/src/translators/: arxiv.ts  biorxiv.ts  generic.ts  pubmed.ts  (+4 more)
editor-plugins/google-docs-incite/: .claspignore  appsscript.json  esbuild.config.mjs  package.json  sidebar.html  tsconfig.json
editor-plugins/google-docs-incite/src/: Code.js  Settings.html  Sidebar.css.html  Sidebar.html  Sidebar.js.html  sidebar.ts
editor-plugins/obsidian-incite/: build-release.sh  esbuild.config.mjs  main.js  manifest.json  package.json  styles.css  tsconfig.json
editor-plugins/obsidian-incite/src/: api-client.ts  citation-storage.ts  citation-watcher.ts  frontmatter-citation-storage.ts  main.ts  settings.ts  sidebar-view.ts  types.ts
editor-plugins/shared/: package.json  tsconfig.json
editor-plugins/shared/src/: api-client.ts  bibliography.ts  citation-tracker.ts  citation-watcher-core.ts  context-extractor.ts  format.ts  index.ts  types.ts  ui-helpers.ts
editor-plugins/vscode-incite/: .vscodeignore  esbuild.config.mjs  package.json  tsconfig.json
editor-plugins/vscode-incite/src/: api-client.ts  citation-watcher.ts  context-extractor.ts  extension.ts  sidebar-provider.ts  status-bar.ts  types.ts
editor-plugins/word-incite/: esbuild.config.mjs  install-mac.sh  manifest.xml  package.json  tsconfig.json
editor-plugins/word-incite/src/: api.ts  bibliography.ts  citation-storage.ts  context.ts  document-citation-storage.ts  results-renderer.ts  settings.ts  taskpane.css  taskpane.html  taskpane.ts
editor-plugins/zotero-incite/: .gitignore  README.md  build-release.sh  esbuild.config.mjs  package.json  tsconfig.json  update.json
editor-plugins/zotero-incite/addon/: bootstrap.js  manifest.json  prefs.js
editor-plugins/zotero-incite/src/: api-client.ts  cloud-sync.ts  cloud-upload.ts  hooks.ts  item-pane-section.ts  prefs.ts  server-endpoints.ts  system-utils.ts  text-query-dialog.ts  types.ts  zotero-library.ts
editor-plugins/zotero-incite/typings/: zotero.d.ts
scripts/: Dockerfile.verify  alpha_sweep.py  augment_hard_negatives.py  export_minilm_onnx.py  hybrid_sweep.py  merge_training_data.py  spot_check.py  verify_clean_install.sh
src/incite/: __init__.py  __main__.py  agent.py  api.py  interfaces.py  models.py  utils.py
src/incite/acquire/: __init__.py  config.py  pipeline.py  proxy.py  resolver.py  session.py  unpaywall.py
src/incite/cli/: __init__.py  _shared.py  acquire.py  agent.py  cloud.py  core.py  data.py  doctor.py  experiments.py  finetune.py  llm.py  paperpile.py  serve.py  setup.py
src/incite/corpus/: __init__.py  arxiv_fulltext.py  batch_utils.py  chunking.py  cloud_client.py  contextual_enrichment.py  crossref.py  enrichment.py  folder_source.py  fulltext_extraction.py  grobid.py  grobid_chunking.py  html_preprocessing.py  llm_enrichment.py  loader.py  openalex.py  paperpile_source.py  pdf_extractor.py  pipeline.py  query_reformulation.py  semantic_scholar.py  sentence_chunking.py  synthetic_contexts.py  synthetic_db.py  unarxiv.py  zotero_reader.py
src/incite/discovery/: __init__.py  citation_graph.py  engine.py  graph_analysis.py  graph_cache.py  models.py
src/incite/embeddings/: __init__.py  base.py  chunk_store.py  finetuned.py  specter.py  stores.py  voyage.py
src/incite/evaluation/: __init__.py  batch_diagnosis.py  experiment_log.py  failure_analysis.py  intent_taxonomy.py  metrics.py  passage_metrics.py
src/incite/export/: __init__.py  base.py  bibtex.py  ris.py
src/incite/finetuning/: __init__.py  data_pipeline.py  data_preparation.py  data_sources.py  enrichment.py  fulltext_passages.py  passage_generation.py  pretrain.py  quality.py  s2_context_mining.py  s2orc_citation_mining.py  s2orc_streaming.py  spot_check.py  train.py  train_reranker.py  types.py  validation.py
src/incite/retrieval/: __init__.py  bm25.py  factory.py  hybrid.py  multi_scale.py  neural.py  paragraph.py  reranker.py  two_stage.py
src/incite/storage/: __init__.py  library_db.py
src/incite/tray/: __init__.py  app.py  server_manager.py
src/incite/visualization/: plotly_charts.py  umap_projection.py
src/incite/webapp/: __init__.py  app.py  state.py
tests/: __init__.py  conftest.py  test_abstract_enrichment.py  test_agent.py  test_api.py  test_bibtex_import.py  test_bm25.py  test_cache_safety.py  test_chunk_store.py  test_chunking.py  test_citation_graph.py  test_cloud_e2e.py  test_cloud_integration.py  test_config_persistence.py  test_crossref.py  test_data_preparation.py  test_dataset_validation.py  test_dedup.py  test_discovery_engine.py  test_doctor.py  test_embedding_format_consistency.py  test_error_reporter.py  test_evaluation.py  test_evaluation_integration.py  test_export.py  test_factory.py  test_failure_analysis.py  test_folder_source.py  test_graph_analysis.py  test_grobid.py  test_html_preprocessing.py  test_hybrid.py  test_library_api.py  test_models.py  test_neural.py  test_paperpile_source.py  test_paragraph.py  test_passage_generation.py  test_passage_metrics.py  test_pdf_matching.py  (+16 more)
(+13 files in other folders)
